--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>My App</title>
   </head>
   <body>
-    This is my app!
+    <p>This is a new app</p>
+    Login form
   </body>
 </html>
